add html, content.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,86 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
     <title>inLine | Queue Management</title>
 </head>
-<body>
+<body id="home">
+
+<!-- Navbar -->
+<nav id="navbar">
+    <h1 class="logo">
+      <span class="text-primary">
+        <i class="fas fa-book-open"></i> Edge</span>Ledger
+    </h1>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#what">What</a></li>
+        <li><a href="#why">Why</a></li>
+        <li><a href="#Features">Features</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
+<!-- Header: Showcase -->
+<header id="showcase">
+    <div class="showcase-content">
+        <h1 class="l-heading">
+            Queue Management - Renovated
+        </h1>
+        <p class="lead">
+            inLine is a new queue management service for CityTech College. Spend your time .
+        </p>
+        <a href="#what" class="btn">Get Started Now</a>
+    </div>
+</header>
+
+<!-- What we do -->
+<section id="what" class="bg-light py-1">
+    <div class="container">
+        <h2 class="m-heading text-center"><span class="text-primary">What</span> We Do</h2>
+        <div class="items">
+            <div class="item">
+                <i class="fas fa-university fa-2x"></i>
+                <div>
+                    <h3>Know your waiting time</h3>
+                    <p>inLine can estimate how long you will have to wait before being served.</p>
+                </div>
+            </div>
+            <div class="item">
+                <i class="fas fa-book-reader fa-2x"></i>
+                <div>
+                    <h3>Queue remotely prior to arrival</h3>
+                    <p>Helps you to avoid waiting in line until it’s your turn using the inLine.</p>
+                </div>
+            </div>
+            <div class="item">
+                <i class="fas fa-pencil-alt fa-2x"></i>
+                <div>
+                    <h3>Save time</h3>
+                    <p>Just think how you could spend the time you free up!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Footer -->
+<footer id="main-footer" class="bg-dark text-center py-1">
+    <div class="container">
+        <p>Copyright &copy; 2019, inLine, All Rights Reserved</p>
+    </div>
+</footer>
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
+<!-- Local JS File -->
+<script src="js/main.js"></script>
 
 </body>
 </html>
