--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav id="navbar">
     <h1 class="logo">
       <span class="text-primary">
-        <i class="fas fa-book-open"></i> Edge</span>Ledger
+        <i class="fas fa-street-view"></i> in</span>Line
     </h1>
     <ul>
         <li><a href="#home">Home</a></li>
@@ -45,21 +45,21 @@
         <h2 class="m-heading text-center"><span class="text-primary">What</span> We Do</h2>
         <div class="items">
             <div class="item">
-                <i class="fas fa-university fa-2x"></i>
+                <i class="fas fa-history"></i>
                 <div>
                     <h3>Know your waiting time</h3>
                     <p>inLine can estimate how long you will have to wait before being served.</p>
                 </div>
             </div>
             <div class="item">
-                <i class="fas fa-book-reader fa-2x"></i>
+                <i class="fas fa-calendar-times-2x"></i>
                 <div>
                     <h3>Queue remotely prior to arrival</h3>
                     <p>Helps you to avoid waiting in line until it’s your turn using the inLine.</p>
                 </div>
             </div>
             <div class="item">
-                <i class="fas fa-pencil-alt fa-2x"></i>
+                <i class="fas fa-user-clock"></i>
                 <div>
                     <h3>Save time</h3>
                     <p>Just think how you could spend the time you free up!</p>
