--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#what">What</a></li>
-        <li><a href="#why">Why</a></li>
-        <li><a href="#Features">Features</a></li>
+        <li><a href="#how">How</a></li>
         <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
@@ -30,10 +29,10 @@
 <header id="showcase">
     <div class="showcase-content">
         <h1 class="l-heading">
-            Queue Management - Renovated
+            Waiting Line Management for Academic Advising
         </h1>
         <p class="lead">
-            inLine is a new queue management service for CityTech College. Spend your time .
+            inLine is a new queue management service for CityTech College.
         </p>
         <a href="#what" class="btn">Get Started Now</a>
     </div>
@@ -42,24 +41,24 @@
 <!-- What we do -->
 <section id="what" class="bg-light py-1">
     <div class="container">
-        <h2 class="m-heading text-center"><span class="text-primary">What</span> We Do</h2>
+        <h2 class="m-heading text-center"><span class="text-primary">What</span> inLine Offer</h2>
         <div class="items">
             <div class="item">
-                <i class="fas fa-history"></i>
+                <i class="fas fa-history fa-2x"></i>
                 <div>
                     <h3>Know your waiting time</h3>
                     <p>inLine can estimate how long you will have to wait before being served.</p>
                 </div>
             </div>
             <div class="item">
-                <i class="fas fa-calendar-times-2x"></i>
+                <i class="fas fa-calendar-times fa-2x"></i>
                 <div>
                     <h3>Queue remotely prior to arrival</h3>
                     <p>Helps you to avoid waiting in line until it’s your turn using the inLine.</p>
                 </div>
             </div>
             <div class="item">
-                <i class="fas fa-user-clock"></i>
+                <i class="fas fa-user-clock fa-2x"></i>
                 <div>
                     <h3>Save time</h3>
                     <p>Just think how you could spend the time you free up!</p>
@@ -68,6 +67,23 @@
         </div>
     </div>
 </section>
+
+<!-- Section: How it works -->
+<section id="how">
+    <div class="how-img"></div>
+    <div class="how-text bg-dark p-2">
+        <h2 class="m-heading"><span class="text-primary">How</span> It Works</h2>
+        <p>Student location in queue (line) and availability by clearly displaying call numbers, estimated call time, window gate, and real-time availability status. </p>
+        <h3>Steps</h3>
+        <ul class="list">
+            <li><span class="text-primary">Step 1: </span>Web Access - Allows users to book tickets remotely and give feedback</li>
+            <li><span class="text-primary">Step 2: </span>Line Monitor - Display called tickets and showed estimated time</li>
+            <li><span class="text-primary">Step 3: </span>Now Serving = Consultation </li>
+            <li><span class="text-primary">Step 4: </span>Management Dashboard - Smart analytics with real time monitoring and reporting of staff performance and customer satisfaction</li>
+        </ul>
+    </div>
+</section>
+
 
 <!-- Footer -->
 <footer id="main-footer" class="bg-dark text-center py-1">
