--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 </header>
 
-<!-- What we do -->
+<!-- What app do -->
 <section id="what" class="bg-light py-1">
     <div class="container">
         <h2 class="m-heading text-center"><span class="text-primary">What</span> inLine Offer</h2>
@@ -73,15 +73,64 @@
     <div class="how-img"></div>
     <div class="how-text bg-dark p-2">
         <h2 class="m-heading"><span class="text-primary">How</span> It Works</h2>
-        <p>Student location in queue (line) and availability by clearly displaying call numbers, estimated call time, window gate, and real-time availability status. </p>
+        <p>Student location in queue (line) and availability by clearly displaying call numbers, estimated call time,
+            window gate, and real-time availability status. </p>
         <h3>Steps</h3>
         <ul class="list">
-            <li><span class="text-primary">Step 1: </span>Web Access - Allows users to book tickets remotely and give feedback</li>
-            <li><span class="text-primary">Step 2: </span>Line Monitor - Display called tickets and showed estimated time</li>
-            <li><span class="text-primary">Step 3: </span>Now Serving = Consultation </li>
-            <li><span class="text-primary">Step 4: </span>Management Dashboard - Smart analytics with real time monitoring and reporting of staff performance and customer satisfaction</li>
+            <li><span class="text-primary">Step 1: </span>Web Access - Allows users to book tickets remotely and give
+                feedback
+            </li>
+            <li><span class="text-primary">Step 2: </span>Line Monitor - Display called tickets and showed estimated
+                time
+            </li>
+            <li><span class="text-primary">Step 3: </span>Now Serving = Consultation</li>
+            <li><span class="text-primary">Step 4: </span>Management Dashboard - Smart analytics with real time
+                monitoring and reporting of staff performance and customer satisfaction
+            </li>
         </ul>
     </div>
+</section>
+
+<!-- Section: Clients -->
+<section id="clients" class="py-1">
+    <div class="container">
+        <h2 class="m-heading text-center">
+            <span class="text-primary">Our</span> Clients
+        </h2>
+        <div class="items py-1">
+            <div><img src="./img/logos/logo1.png" alt="Client"></div>
+            <div><img src="./img/logos/logo2.png" alt="Client"></div>
+            <div><img src="./img/logos/logo3.png" alt="Client"></div>
+        </div>
+    </div>
+</section>
+
+<!-- Section: Contact -->
+<section id="contact">
+    <div class="contact-form bg-primary p-2">
+        <h2 class="m-heading">Contact Us</h2>
+        <p>Please use the form below to contact us</p>
+        <form>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" placeholder="Enter Name">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" placeholder="Enter Email">
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="text" name="phone" id="phone" placeholder="Enter Phone Number">
+            </div>
+            <div class="form-group">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" placeholder="Enter Message"></textarea>
+            </div>
+            <input type="submit" value="Send" class="btn btn-dark">
+        </form>
+    </div>
+    <div class="map"></div>
 </section>
 
 
