--- a/index.html
+++ b/index.html
@@ -95,12 +95,10 @@
 <section id="clients" class="py-1">
     <div class="container">
         <h2 class="m-heading text-center">
-            <span class="text-primary">Our</span> Clients
+            <span class="text-primary">No more waiting</span> @ CityTech
         </h2>
         <div class="items py-1">
-            <div><img src="./img/logos/logo1.png" alt="Client"></div>
-            <div><img src="./img/logos/logo2.png" alt="Client"></div>
-            <div><img src="./img/logos/logo3.png" alt="Client"></div>
+            <div><img src="./img/logos/citytech.png" alt="Logo"></div>
         </div>
     </div>
 </section>
