add logo and slogan.

--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
 <section id="clients" class="py-1">
     <div class="container">
         <h2 class="m-heading text-center">
-            <span class="text-primary">No more waiting</span> @ CityTech
+            <span class="text-primary">New waiting line</span> @ CityTech
         </h2>
         <div class="items py-1">
-            <div><img src="./img/logos/citytech.png" alt="Logo"></div>
+            <div><img src="img/citytech.png" alt="Logo"></div>
+            <div><img src="img/citytech.png" alt="Logo"></div>
+            <div><img src="img/citytech.png" alt="Logo"></div>
         </div>
     </div>
 </section>
