--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>inLine | Queue Management</title>
 </head>
@@ -141,7 +142,11 @@
 </footer>
 
 <!-- Local JS File -->
+<!--AIzaSyAB2pu_uskKASJcp5Ip85ijjowkomzYDow-->
+
 <script src="js/jquery-3.4.1.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB2pu_uskKASJcp5Ip85ijjowkomzYDow&callback=initMap"
+        async defer></script>
 <script src="js/main.js"></script>
 
 </body>
