--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/all.css"
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
           integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>inLine | Queue Management</title>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="item">
-                <i class="fas fa-user-clock fa-2x"></i>
+                <i class="fas fa-clock fa-2x"></i>
                 <div>
                     <h3>Save time</h3>
                     <p>Just think how you could spend the time you free up!</p>
@@ -130,7 +130,13 @@
             <input type="submit" value="Send" class="btn btn-dark">
         </form>
     </div>
-    <div class="map"></div>
+    <div class="mapouter">
+        <div class="gmap_canvas">
+            <iframe width="600" height="550" id="gmap_canvas"
+                    src="https://maps.google.com/maps?q=New%20York%20City%20College%20of%20Technology&t=&z=17&ie=UTF8&iwloc=&output=embed"
+                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        </div>
+    </div>
 </section>
 
 
@@ -145,8 +151,7 @@
 <!--AIzaSyAB2pu_uskKASJcp5Ip85ijjowkomzYDow-->
 
 <script src="js/jquery-3.4.1.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAB2pu_uskKASJcp5Ip85ijjowkomzYDow&callback=initMap"
-        async defer></script>
+
 <script src="js/main.js"></script>
 
 </body>
