edit responsive map.

--- a/index.html
+++ b/index.html
@@ -95,11 +95,9 @@
 <section id="clients" class="py-1">
     <div class="container">
         <h2 class="m-heading text-center">
-            <span class="text-primary">New waiting line</span> @ CityTech
+            <span class="text-primary">New line</span> @ CityTech
         </h2>
         <div class="items py-1">
-            <div><img src="img/citytech.png" alt="Logo"></div>
-            <div><img src="img/citytech.png" alt="Logo"></div>
             <div><img src="img/citytech.png" alt="Logo"></div>
         </div>
     </div>
@@ -130,9 +128,9 @@
             <input type="submit" value="Send" class="btn btn-dark">
         </form>
     </div>
-    <div class="mapouter">
+    <div class="mapouter" class="map">
         <div class="gmap_canvas">
-            <iframe width="600" height="550" id="gmap_canvas"
+            <iframe id="gmap_canvas"
                     src="https://maps.google.com/maps?q=New%20York%20City%20College%20of%20Technology&t=&z=17&ie=UTF8&iwloc=&output=embed"
                     frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
         </div>
