update git ignore.

--- a/index.html
+++ b/index.html
@@ -128,12 +128,10 @@
             <input type="submit" value="Send" class="btn btn-dark">
         </form>
     </div>
-    <div class="mapouter" class="map">
-        <div class="gmap_canvas">
+    <div class="map">
             <iframe id="gmap_canvas"
                     src="https://maps.google.com/maps?q=New%20York%20City%20College%20of%20Technology&t=&z=17&ie=UTF8&iwloc=&output=embed"
                     frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-        </div>
     </div>
 </section>
 
