--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#what">What</a></li>
         <li><a href="#how">How</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contact">Contact1</a></li>
     </ul>
 </nav>
 
