--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#what">What</a></li>
         <li><a href="#how">How</a></li>
-        <li><a href="#contact">Contact1</a></li>
+        <li><a href="#contact">Contact</a></li>
     </ul>
 </nav>
 
@@ -131,7 +131,7 @@
     <div class="map">
             <iframe id="gmap_canvas"
                     src="https://maps.google.com/maps?q=New%20York%20City%20College%20of%20Technology&t=&z=17&ie=UTF8&iwloc=&output=embed"
-                    frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                    height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
 </section>
 
