--- a/index.html
+++ b/index.html
@@ -143,10 +143,13 @@
     </div>
 </footer>
 
-<!-- Local JS File -->
-<!--AIzaSyAB2pu_uskKASJcp5Ip85ijjowkomzYDow-->
+<!-- JQuery CDN -->
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 
-<script src="js/jquery-3.4.1.min.js"></script>
+<!-- Local JS File -->
 
 <script src="js/main.js"></script>
 
